--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0px;
+    padding: 0px;
+  box-sizing: border-box;  
+}
 body{
     background-image: url('background.jpg');
 }
@@ -5,6 +10,7 @@ body{
     display: flex;
     justify-content: center;
     user-select: none;
+    min-height: 100vh;
 }
 header{
     display: flex;
@@ -13,18 +19,31 @@ header{
     justify-content: center;
     color: darkblue;
     user-select: none;
+    margin: 10px;
+    border-bottom:2px solid rgb(9, 65, 113) ;
 }
 .container{
     margin: 10px;
     user-select: none;
+    border: 4px dashed rgb(9, 65, 113);
+    height: 100%;
+}
+#form{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px;
+
 }
 #form button{
     background-image:linear-gradient(lavender,#9b1529);
     border-radius: 10px;
-    height: 35px;
+    height: 40px;
     width: 100px;
     cursor:not-allowed;
+    opacity: 0.8;
     box-shadow: 2px 2px 2px green ;
+    float: right;
 }
 #form button:hover{
     background-image:linear-gradient(to right,#575A4B,#88b308);
